# StockMarketGaem

./: CMakeLists.txt  README.md
.github/Workflows/: Build.yml
src/: gstate.h  main.c  stockTrade.c  stockTrade.h
